Started working on converting to XML and bug fixes